Fix spacing between platinum sponsor banners.

--- a/style.css
+++ b/style.css
@@ -2424,7 +2424,8 @@ Sidebar
 
 /* Platinum Sponsors widget. */
 #text-2 a,
-#text-2 img {
+#text-2 img,
+#text-2 p {
   display: block;
   margin: 0;
 }
